# ats-showcase

./: .claudeignore  .env.example  .gitignore  .mcp.json  .mdl_rules.rb  .mdlrc  .pre-commit-config.yaml  .secrets.baseline  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  DESIGN.md  Makefile  PLUGIN.md  README.md  SECURITY.md  audit-output.txt  conftest.py  feat-idea.md  flaw-symptons.md  gh-issue-content.md  gh-issue-draft.mc  gh-issue-draft.md  github-issue-draft.md  github-test-failure-analysis.md  issue-content.json  issue-content.txt  pyproject.toml  pytest.ini
.claude/: audit-checklist.md  profiles.json  settings.json
.claude/hooks/: post-edit-quality.sh  pre-commit-no-main.sh  pre-commit-quality.sh
.claude/rules/: assess.md  cli.md  crawl.md  multi-agent.md  preprocess.md  storage.md  tui.md  verify.md
.claude/rules/tui/: architecture.md  index.md  patterns.md  widgets.md
.claude/skills/assess-jobs/: SKILL.md
.claude/skills/crawl-jobs/: SKILL.md
.claude/skills/pre-commit-enforce/: README.md  SKILL.md  setup.sh
.claude/skills/pre-commit-enforce/examples/: .claude-settings.json.example
.claude/skills/pre-commit-enforce/src/: helpers.sh  hook-template.sh
.github/: copilot-instructions.md
.github/ISSUE_TEMPLATE/: quarterly-context-audit.md
.github/instructions/: cli-usage.instructions.md  code-patterns.instructions.md  issue-workflow.instructions.md
.github/workflows/: context-lint.yml  quality-checks.yml
config/: companies.json
config_test/: test_config1.json  test_config2.json
docs/: ARCHITECTURE-DECISIONS.md  ARCHITECTURE.md  ASSESS.md  CLI-STEP-BY-STEP.md  CLI.md  COMPATIBILITY.md  CONVENTIONS.md  CRAWL.md  INTEGRITY.md  PREPROCESS.md  QUALITY-ASSURANCE.md  README.md  SETUP.md  STORAGE.md  VERIFY.md  parsing-job-postings.md
docs/dev-note/: ai-compliance-log.md  ai-config-audit-findings.md  ai-config-maintenance.md  chore-124-config-audit.md  context-baseline.json  context-maintenance-workflow.md  issue-149-llm-cost-analysis.md  issue-19-demo-walkthrough.md  issue-19-poc-evaluation-guide.md  issue-19-success-criteria.md  issue-23-copilot-structure-analysis.md  issue-26-poc-validation-results.md  issue-6-precommit-implementation-progress.md  issue-7-implementation-progress.md  preprocessor-llm-api-research.md
docs/implementation-planning/: issue-13-copilot-skill-implementation.md  issue-19-implementation-tracking.md  issue-19-phase-2-preprocessing.md  issue-19-phase-3-verification.md  issue-19-phase-4-assessment.md  issue-19-phase-5-export.md  issue-19-poc-crawl-automation.md  issue-22-mock-parsing-fix.md  issue-6-precommit-setup-implementation.md  issue-7-nlp-setup-implementation.md  pr-15-code-review-fixes-plan.md
examples/textual_review_poc/: IMPLEMENTATION_NOTES.md  INDEX.md  README.md  TESTING.md  __init__.py  poc_state.py  review_dialog.py  review_poc.py  run_poc.py
scripts/: context-audit.py
src/: cli.py
src/assessment/: __init__.py  assessor.py  data_reshaper.py  llm_integration.py  prompt_builder.py  types.py
src/browser/: crawler.py  selectors.py
src/config/: models.py
src/formatters/: __init__.py  markdown_viewer.py
src/id_generation/: __init__.py  hash_generator.py  url_utils.py
src/integrity/: __init__.py  exporter.py  inspector.py  models.py  purger.py
src/llm/: client.py  prompts.py  provider.py
src/models/: __init__.py  assessment.py  job.py
src/parsers/: html_cleaner.py
src/setup/: setup_precommit.py  validate_nlp_setup.py
src/storage/: assessment_store.py  db.py  export.py  migrations.py  queries.py
src/tokenization/: chunker.py  counter.py  preprocessor.py
src/tui/: __init__.py  dashboard.py
src/tui/dialogs/: config_wizard.py  job_details.py  job_review.py
src/tui/models/: __init__.py  state.py
src/tui/panels/: __init__.py  assess_panel.py  base.py  crawl_panel.py  export_panel.py  preprocess_panel.py  review_panel.py
src/tui/utils/: __init__.py  formatters.py
src/tui/widgets/: __init__.py  cost_tracker.py  job_table.py  phase_indicator.py  progress_bar.py  search_input.py
src/verification/: __init__.py  reviewer.py
tests/: conftest.py  test_assessment.py  test_assessment_store_filters.py  test_assessment_store_purge.py  test_cli_all_flags.py  test_cli_assess.py  test_cli_config.py  test_cli_date_filters.py  test_cli_multi_company_review.py  test_cli_up_to_flag.py  test_company_filtering.py  test_config_models.py  test_crawler.py  test_crawler_normalize.py  test_e2e_date_filters.py  test_end_to_end.py  test_env_loading.py  test_export.py  test_id_generation.py  test_integrity_cli.py  test_integrity_export.py  test_integrity_inspector.py  test_integrity_purger.py  test_issue_102_phase_1_visibility.py  test_issue_102_phase_4_job_timeline.py  test_issue_116_mode_filters.py  test_llm.py  test_llm_comparison.py  test_preprocessor.py  test_storage.py  test_verification.py  test_view.py
tests/assessment/: __init__.py  test_assessor.py  test_data_reshaper.py  test_llm_integration.py  test_prompt_builder.py
tests/tokenization/: conftest.py  test_preprocessor_enhanced.py
tests/tui/: conftest.py  test_config_wizard.py  test_dashboard.py  test_error_handling_edge_cases.py  test_fixes.py  test_integration_workflow.py  test_job_details.py  test_job_review_dialog.py  test_review_phase_interactive.py  test_search_filter.py  test_state.py  test_terminal_accessibility.py
