[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ats-playground"
version = "0.1.0"
description = "Agentic AI workflow for intelligent job assessment and CV matching"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "ATS Playground Contributors", email = "dev@ats-playground.local" }
]
requires-python = ">=3.11"
keywords = [
    "ai",
    "job-matching",
    "cv-assessment",
    "nlp",
    "llm",
    "claude",
    "playwright"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    # Browser automation
    "playwright>=1.48.0,<2.0",
    
    # HTML processing
    "markitdown>=0.1.5,<1.0",
    "beautifulsoup4>=4.12.0,<5.0",
    "lxml>=6.1.0,<7.0",
    
    # NLP & tokenization
    "spacy>=3.8.0,<4.0",
    "tiktoken>=0.8.0,<1.0",
    
    # Data validation & serialization
    "pydantic>=2.5.0,<3.0",
    "python-dotenv>=1.0.0,<2.0",
    
    # CLI framework
    "typer>=0.9.0,<1.0",
    "click>=8.1.0,<9.0",
    
    # LLM client
    "anthropic>=0.25.0,<1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.3,<10.0",
    "pytest-cov>=4.0.0,<5.0",
    "pytest-asyncio>=0.21.0,<1.0",
    "black>=26.3.1,<27.0",
    "ruff>=0.1.0,<1.0",
    "mypy>=1.0.0,<2.0",
    "pre-commit>=3.0.0,<4.0",
]

[project.urls]
Homepage = "https://github.com/pluto-atom-4/ats-playground"
Repository = "https://github.com/pluto-atom-4/ats-playground.git"
Issues = "https://github.com/pluto-atom-4/ats-playground/issues"
Documentation = "https://github.com/pluto-atom-4/ats-playground/tree/main/docs"

[project.scripts]
ats-cli = "src.cli:main"

[tool.setuptools]
packages = ["src"]

[tool.setuptools.package-data]
src = ["py.typed"]

[tool.black]
line-length = 100
target-version = ["py311", "py312", "py313"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 100
target-version = "py311"
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # Pyflakes
    "I",    # isort
    "C",    # flake8-comprehensions
    "B",    # flake8-bugbear
]
ignore = [
    "E501",  # line too long (handled by black)
    "W503",  # line break before binary operator
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401", "F403"]
"tests/*" = ["F401", "F403"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--strict-markers -v"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
exclude = ["tests/", "build/", "dist/"]

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/__main__.py",
    "*/venv/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstract",
]
precision = 2
show_missing = true
skip_covered = false
