[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ats-showcase"
version = "0.1.0"
description = "Agentic AI workflow for intelligent job assessment and CV matching"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "ATS Showcase Contributors", email = "dev@ats-showcase.local" }
]
requires-python = ">=3.11"
keywords = [
    "ai",
    "job-matching",
    "cv-assessment",
    "nlp",
    "llm",
    "claude",
    "playwright"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    # Browser automation
    "playwright>=1.48.0,<2.0",

    # HTML processing
    "markitdown>=0.1.5,<1.0",
    "beautifulsoup4>=4.12.0,<5.0",
    "lxml>=6.1.0,<7.0",

    # NLP & tokenization
    "spacy>=3.8.0,<4.0",
    "tiktoken>=0.8.0,<1.0",

    # Data validation & serialization
    "pydantic>=2.5.0,<3.0",
    "python-dotenv>=1.0.0,<2.0",

    # CLI framework
    "typer>=0.9.0,<1.0",
    "click>=8.1.0,<9.0",

    # TUI framework
    "textual>=0.42.0,<1.0",
    "rich>=13.0,<14.0",

    # LLM client
    "anthropic>=0.25.0,<1.0",
]

[dependency-groups]
dev = [
    "pytest>=8.2,<9.0",
    "pytest-cov>=4.0.0,<5.0",
    "pytest-asyncio>=0.24.0,<1.0",
    "ruff>=0.15.0,<1.0",
    "mypy>=2.1.0,<3.0",
    "pre-commit>=3.0.0,<4.0",
    "detect-secrets>=1.5.0", # Added for credential scanning
    "bandit>=1.7.0",         # Added for AST vulnerability scanning
]

[project.urls]
Homepage = "https://github.com/pluto-atom-4/ats-showcase"
Repository = "https://github.com/pluto-atom-4/ats-showcase.git"
Issues = "https://github.com/pluto-atom-4/ats-showcase/issues"
Documentation = "https://github.com/pluto-atom-4/ats-showcase/tree/main/docs"

[project.scripts]
ats-cli = "src.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["*"]

[tool.setuptools.package-data]
src = ["py.typed"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # Pyflakes
    "I",    # isort
    "C",    # flake8-comprehensions
    "B",    # flake8-bugbear
]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["models", "browser", "cli", "llm", "parsers", "storage", "tokenization", "verification", "tui", "src"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403"]
"tests/*" = ["F401", "F403"]
"src/llm/provider.py" = ["C901"]  # assess_job method complexity (retry logic)
"src/cli.py" = ["C901"]  # assess_jobs command complexity (workflow orchestration)

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
pythonpath = ["src"]
addopts = "--strict-markers -v --tb=short"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "asyncio: marks tests as async",
]
norecursedirs = [".git", ".venv", "venv", "build", "dist", ".tox", "__pycache__", "*.egg-info"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
exclude = ["tests/", "build/", "dist/"]

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/__main__.py",
    "*/venv/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstract",
]
precision = 2
show_missing = true
skip_covered = false
